# python-project-83

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  database.py  url_processing.py  utils.py  validator.py  web_scraping.py
page_analyzer/templates/: 404.html  base.html  index.html  urls.html
page_analyzer/templates/urls/: index.html
page_analyzer/templates/urls/id/: index.html
