[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Daniil <danokp@mail.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
validators = "^0.20.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
